refactor: Remove dependency to graph in DirectGraphFinder.